--- a/src/Osu.Music.UI/Views/CollectionDetailsView.xaml
+++ b/src/Osu.Music.UI/Views/CollectionDetailsView.xaml
@@ -6,7 +6,6 @@
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              xmlns:m="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:gl="clr-namespace:System.Globalization;assembly=mscorlib"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
@@ -37,7 +36,7 @@
                     </StackPanel>
                     <TextBlock Text="{Binding Model.Collection.Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="0 5 0 0"/>
                     <StackPanel Orientation="Horizontal" Margin="0 39 0 0">
-                        <Button Style="{DynamicResource MaterialDesignRaisedButton}" Command="{Binding LaunchCollectionCommand}" Foreground="White" Content="PLAY" Width="80"/>
+                        <Button Style="{DynamicResource MaterialDesignRaisedButton}" Command="{Binding LaunchCollectionCommand}" Foreground="White" Content="{DynamicResource Strings.CollectionDetailsView.Play}" Width="80"/>
                     </StackPanel>
                 </StackPanel>
             </DockPanel>
@@ -86,7 +85,7 @@
                                     Command="{Binding DataContext.OpenBeatmapInBrowserCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CollectionDetailsView}}}" 
                                     CommandParameter="{Binding .}">
                                 <Button.ToolTip>
-                                    <TextBlock Style="{DynamicResource TooltipText}" Text="Show on osu! website"/>
+                                    <TextBlock Style="{DynamicResource TooltipText}" Text="{DynamicResource Strings.CollectionDetailsView.Tooltips.ShowOnOsuWebsite}"/>
                                 </Button.ToolTip>
                             </Button>
                         </StackPanel>
