--- a/src/Osu.Music.UI/Views/Dialogs/AddToPlaylistView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/AddToPlaylistView.xaml
@@ -15,11 +15,11 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid HorizontalAlignment="Stretch">
-            <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" VerticalAlignment="Center" Text="Add to..."/>
+            <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" VerticalAlignment="Center" Text="{DynamicResource Strings.AddToPlaylistView.Header}"/>
             <Button HorizontalAlignment="Right" Style="{DynamicResource DialogCloseButton}" IsCancel="True"
                     Command="{Binding CancelCommand}"/>
         </Grid>
-        <TextBlock Style="{DynamicResource MediumEmphasisListText}" FontSize="14" Text="No playlists available for this song" Grid.Row="1" MinWidth="420" Margin="0 10 0 10"
+        <TextBlock Style="{DynamicResource MediumEmphasisListText}" FontSize="14" Text="{DynamicResource Strings.AddToPlaylistView.NoAvailable}" Grid.Row="1" MinWidth="420" Margin="0 10 0 10"
                    Visibility="{Binding Path=Visibility, ElementName=PlaylistList, Converter={StaticResource ReverseVisibilityConverter}}"/>
         <ListView x:Name="PlaylistList" Grid.Row="1" Margin="0 6 0 0" FontSize="18" ItemsSource="{Binding Playlists}" MaxHeight="400"
                   Visibility="{Binding Playlists.Count, Converter={StaticResource NotZeroToVisibilityConverter}}">
