--- a/src/Osu.Music.UI/Views/Dialogs/GenericConfirmationView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/GenericConfirmationView.xaml
@@ -16,7 +16,7 @@
         <TextBlock Style="{DynamicResource MediumEmphasisListText}" Grid.Row="1" Margin="0 6 0 0" FontSize="14" TextWrapping="WrapWithOverflow" Text="{Binding Message}"/>
         <StackPanel Grid.Row="2" Margin="0 16 0 0" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Command="{Binding AcceptCommand}" IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}" Content="{Binding Caption}"/>
-            <Button Margin="8,0,0,0" Command="{Binding CancelCommand}" IsCancel="True" Style="{StaticResource MaterialDesignFlatButton}" Content="CANCEL"/>
+            <Button Margin="8,0,0,0" Command="{Binding CancelCommand}" IsCancel="True" Style="{StaticResource MaterialDesignFlatButton}" Content="{DynamicResource Strings.GenericConfirmationView.Cancel}"/>
         </StackPanel>
     </Grid>
 </UserControl>
