--- a/src/Osu.Music.UI/Views/PlaylistDetailsView.xaml
+++ b/src/Osu.Music.UI/Views/PlaylistDetailsView.xaml
@@ -44,8 +44,8 @@
                     <TextBlock Text="{Binding Model.Playlist.Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="0 5 0 0"/>
                     <TextBlock Text="{Binding Model.Playlist.Updated, StringFormat=Updated {0}, ConverterCulture={x:Static gl:CultureInfo.CurrentCulture}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
                     <StackPanel Orientation="Horizontal" Margin="0 15 0 0">
-                        <Button Style="{DynamicResource MaterialDesignRaisedButton}" Command="{Binding LaunchPlaylistCommand}" Foreground="White" Content="PLAY" Width="80"/>
-                        <Button Style="{DynamicResource MaterialDesignFlatButton}" Content="DELETE" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="5 0 0 0" Command="{Binding DeleteCommand}"/>
+                        <Button Style="{DynamicResource MaterialDesignRaisedButton}" Command="{Binding LaunchPlaylistCommand}" Foreground="White" Content="{DynamicResource Strings.PlaylistDetailsView.Play}" Width="80"/>
+                        <Button Style="{DynamicResource MaterialDesignFlatButton}" Content="{DynamicResource Strings.PlaylistDetailsView.Delete}" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="5 0 0 0" Command="{Binding DeleteCommand}" Cursor="Hand"/>
                     </StackPanel>
                 </StackPanel>
             </DockPanel>
@@ -94,14 +94,14 @@
                                     Command="{Binding DataContext.OpenBeatmapInBrowserCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:PlaylistDetailsView}}}" 
                                     CommandParameter="{Binding .}">
                                 <Button.ToolTip>
-                                    <TextBlock Style="{DynamicResource TooltipText}" Text="Show on osu! website"/>
+                                    <TextBlock Style="{DynamicResource TooltipText}" Text="{DynamicResource Strings.PlaylistDetailsView.Tooltips.ShowOnOsuWebsite}"/>
                                 </Button.ToolTip>
                             </Button>
                             <Button Style="{DynamicResource SongListRemoveFromPlaylist}" Margin="5 0 0 0"
                                     Command="{Binding DataContext.RemoveFromPlaylistCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:PlaylistDetailsView}}}" 
                                     CommandParameter="{Binding .}">
                                 <Button.ToolTip>
-                                    <TextBlock Style="{DynamicResource TooltipText}" Text="Remove from this playlist"/>
+                                    <TextBlock Style="{DynamicResource TooltipText}" Text="{DynamicResource Strings.PlaylistDetailsView.Tooltips.RemoveFromPlaylist}"/>
                                 </Button.ToolTip>
                             </Button>
                         </StackPanel>
