--- a/src/Osu.Music.UI/Resources/Language/osu.Music.en-US.xaml
+++ b/src/Osu.Music.UI/Resources/Language/osu.Music.en-US.xaml
@@ -1,5 +1,70 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:s="clr-namespace:System;assembly=mscorlib">
-    
+    <s:String x:Key="Strings.AboutView.License">License</s:String>
+    <s:String x:Key="Strings.AboutView.License.Header">License:</s:String>
+    <s:String x:Key="Strings.AboutView.Notices">Open Source Notices</s:String>
+    <s:String x:Key="Strings.AboutView.ReleaseNotes">release notes</s:String>
+    <s:String x:Key="Strings.AddToPlaylistView.Header">Add to...</s:String>
+    <s:String x:Key="Strings.AddToPlaylistView.NoAvailable">No playlists available for this song</s:String>
+    <s:String x:Key="Strings.CollectionDetailsView.Play">PLAY</s:String>
+    <s:String x:Key="Strings.CollectionDetailsView.Tooltips.ShowOnOsuWebsite">Show on osu! website</s:String>
+    <s:String x:Key="Strings.DataTemplate.SongsCount.Empty">No songs</s:String>
+    <s:String x:Key="Strings.DataTemplate.SongsCount.Multiple">{0} songs</s:String>
+    <s:String x:Key="Strings.DataTemplate.SongsCount.Single">1 song</s:String>
+    <s:String x:Key="Strings.GenericConfirmationView.Cancel">CANCEL</s:String>
+    <s:String x:Key="Strings.LibraryView.Tooltips.AddToPlaylist">Add to a playlist</s:String>
+    <s:String x:Key="Strings.LibraryView.Tooltips.ShowOnOsuWebsite">Show on osu! website</s:String>
+    <s:String x:Key="Strings.MainView.NewPlaylistDialog.Create">CREATE</s:String>
+    <s:String x:Key="Strings.MainView.NewPlaylistDialog.Title">New playlist</s:String>
+    <s:String x:Key="Strings.MainView.Sections.Collections">Collections</s:String>
+    <s:String x:Key="Strings.MainView.Sections.Library">Library</s:String>
+    <s:String x:Key="Strings.MainView.Sections.NewPlaylist">New playlist</s:String>
+    <s:String x:Key="Strings.MainView.Sections.Playlists">Playlists</s:String>
+    <s:String x:Key="Strings.MainView.Tooltips.About">About</s:String>
+    <s:String x:Key="Strings.MainView.Tooltips.Github">Go to GitHub</s:String>
+    <s:String x:Key="Strings.MainView.Tooltips.Search">Search</s:String>
+    <s:String x:Key="Strings.MainView.Tooltips.Settings">Settings</s:String>
+    <s:String x:Key="Strings.MainView.Tooltips.Update">Update osu.Music</s:String>
+    <s:String x:Key="Strings.ManagePlaylistNameView.Cancel">CANCEL</s:String>
+    <s:String x:Key="Strings.ManagePlaylistNameView.TextHint">Name</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.Delete">DELETE</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.DeleteDialog.Caption">DELETE</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.DeleteDialog.Message">Are you sure you want to delete {0}?\r\nThis action cannot be undone.</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.DeleteDialog.Title">Delete playlist</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.EditDialog.Caption">EDIT</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.EditDialog.Title">Edit playlist</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.Play">PLAY</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.Tooltips.RemoveFromPlaylist">Remove from this playlist</s:String>
+    <s:String x:Key="Strings.PlaylistDetailsView.Tooltips.ShowOnOsuWebsite">Show on osu! website</s:String>
+    <s:String x:Key="Strings.SearchView.Headers.All">All</s:String>
+    <s:String x:Key="Strings.SearchView.Headers.Collections">Collections</s:String>
+    <s:String x:Key="Strings.SearchView.Headers.Playlists">Playlists</s:String>
+    <s:String x:Key="Strings.SearchView.Headers.Songs">Songs</s:String>
+    <s:String x:Key="Strings.SearchView.Item.Description.Collection">Collection</s:String>
+    <s:String x:Key="Strings.SearchView.Item.Description.Playlist">Playlist</s:String>
+    <s:String x:Key="Strings.SearchView.JumpTo">Jump to</s:String>
+    <s:String x:Key="Strings.SearchView.TextHint">Search</s:String>
+    <s:String x:Key="Strings.SettingsView.Appearance.Color">COLOR</s:String>
+    <s:String x:Key="Strings.SettingsView.Appearance.Color.Description">Why limit yourself to one boring color? Change the color of osu!Music to suit your mood! My personal advice is a refreshing lime green :)</s:String>
+    <s:String x:Key="Strings.SettingsView.General.Language">LANGUAGE</s:String>
+    <s:String x:Key="Strings.SettingsView.General.Path">PATH TO OSU!</s:String>
+    <s:String x:Key="Strings.SettingsView.General.Path.Change">CHANGE</s:String>
+    <s:String x:Key="Strings.SettingsView.General.Path.Description">osu.Music automatically scans your system for osu! folder. However, in some cases (i.e. multiple versions of osu! installed) it may be useful to be able to change this setting manually.</s:String>
+    <s:String x:Key="Strings.SettingsView.Headers.Appearance">Appearance</s:String>
+    <s:String x:Key="Strings.SettingsView.Headers.General">General</s:String>
+    <s:String x:Key="Strings.SettingsView.Headers.Keybinds">Keybinds</s:String>
+    <s:String x:Key="Strings.SettingsView.Headers.Social">Social</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.Keybinds">KEYBINDS</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.Mute">Mute</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.NextTrack">Next track</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.PlayPause">Play/Pause</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.PreviousTrack">Previous track</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.Repeat">Repeat</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.Shuffle">Shuffle</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.Unknown">Unknown</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.VolumeDown">Volume down</s:String>
+    <s:String x:Key="Strings.SettingsView.Keybinds.VolumeUp">Volume up</s:String>
+    <s:String x:Key="Strings.SettingsView.Social.Discord">DISCORD</s:String>
+    <s:String x:Key="Strings.SettingsView.Social.Discord.Description">It's just like /np, but for Discord activity. Except, everyone can see it... and judge your taste in music.</s:String>
 </ResourceDictionary>
